argo/apps/drawio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  namespace: tools
  labels:
    app.kubernetes.io/name: drawio
    app.kubernetes.io/instance: drawio
    app.kubernetes.io/part-of: homepage
  annotations:
    argocd.argoproj.io/tracking-id: drawio:apps/Deployment:tools/drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drawio
      app.kubernetes.io/instance: drawio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drawio
        app.kubernetes.io/instance: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: drawio-storage
      volumes:
        - name: drawio-storage
          persistentVolumeClaim:
            claimName: drawio-config
