argo/apps/drawio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: tools
  labels:
    app.kubernetes.io/name: drawio
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homepage
