argo/apps/drawio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio-ingress
  namespace: tools
  labels:
    app.kubernetes.io/name: drawio
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.router.middlewares: tools-drawio-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - drawio.lan
      secretName: wildcard-lan-tls
  rules:
    - host: drawio.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drawio-service
                port:
                  number: 80
